--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&family=Teko:wght@300&family=Yanone+Kaffeesatz:wght@300&display=swap');
+
+/*     font-family: 'Pathway Gothic One', sans-serif;
+
+    font-family: 'Teko', sans-serif;
+
+    font-family: 'Yanone Kaffeesatz', sans-serif; */
+    
 * {
     margin: 0;
     padding: 0;
@@ -48,4 +57,12 @@
     justify-content: space-between;
     font-size: 25px;
     height: 100%;
+}
+
+/* hero image */
+
+.hero-content img{
+    display: block;
+    width: 100%;
+    /* height: 350px; */
 }
