--- a/main.css
+++ b/main.css
@@ -1,16 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100&family=Fira+Sans+Extra+Condensed:wght@200;300&family=Oswald:wght@200&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&family=Teko:wght@300&family=Yanone+Kaffeesatz:wght@300&display=swap');
+/*         font-family: 'Barlow Condensed', sans-serif;
 
-/*     font-family: 'Pathway Gothic One', sans-serif;
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
 
-    font-family: 'Teko', sans-serif;
+    font-family: 'Oswald', sans-serif; */
 
-    font-family: 'Yanone Kaffeesatz', sans-serif; */
-    
-* {
+* :not(h1):not(h2) {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
+    font-size: 20px;
+}
+
+
+/* hide scrollbar but allow scrolling */
+
+body {
+    -ms-overflow-style: none;
+    /* for Internet Explorer, Edge */
+    scrollbar-width: none;
+    /* for Firefox */
+    overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+    /* for Chrome, Safari, and Opera */
 }
 
 .header {
@@ -59,10 +76,69 @@
     height: 100%;
 }
 
+
 /* hero image */
 
-.hero-content img{
+.hero-content img {
     display: block;
     width: 100%;
-    /* height: 350px; */
+}
+
+
+/* Main Content */
+
+.main-content {
+    max-width: 1200px;
+    margin: auto;
+}
+
+h1,
+h2 {
+    font-family: 'Barlow Condensed', sans-serif;
+    text-align: center;
+}
+
+.about-img {
+    display: block;
+    margin-right: 20px;
+}
+
+.about {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+/* Our Service Card */
+
+.card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: none;
+}
+
+.card>div {
+    padding: 30px 20px;
+    background-color: #827397;
+    width: 30%;
+    border-radius: 5px;
+    border: none;
+}
+
+.card p {
+    text-align: center;
+}
+
+.about-collage .container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border: 2px solid black;
+}
+
+.about-collage img {
+    width: 23%;
+    height: auto;
 }
